--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>PROGRAMAÇÃO I</h1>
     <img src="img/CURITIBINHA.png" height="150px" alt="GRECA" srcset="">
     <p>A turma 2J é fera em JavaScript!</p>
+    <p>tchau</p>
 </body>
 </html>
